2010-04-15 Thu  Jari Aalto  <jari.aalto@cante.net>

	* bin/ddir.pl
	(top level): Fix many of the remarks Perl::Critic.
	(Help): rewrite eval Pod::Man call.
	(Tree): rewrite 'local' dirhandle to 'my'.

2010-04-14 Wed  Jari Aalto  <jari.aalto@cante.net>

	* Makefile (top level): Completely rework the documentation
	installation. Add "# Rule:" documentation blocks to the targets.
	(all): call target 'doc'.
	(docdir): New target, and variable.
	(XARGS): New variable.
	(INSTALL_DIR): New variable.
	(PERL): New variable.
	(clean): use find(1).

	* INSTALL (INSTALL): (Manual install): adjust wording.
	(License): Add "by" to the sentence.

	* bin/ddir.pl (Main): Use current dir as the default argument.
	(Help::DESCRIPTION): Explain the name "ddir".
	(Help::SEE ALSO: Add dir(1), wcd(1).

2010-04-04 Sun  Jari Aalto  <jari.aalto@cante.net>

	* bin/ddir.pl (Help): Correct manual page string that appears in
	the center.

2010-03-24 Wed  Jari Aalto  <jari.aalto@cante.net>

	* README (README): Add Copyright and license.

2010-03-23 Tue  Jari Aalto  <jari.aalto@cante.net>

	* bin/ddir.pl (POD::LICENSE): Change wording 'this program' to
	'this program and its documentation'.

2010-03-21 Sun  Jari Aalto  <jari.aalto@cante.net>

	* bin/ddir.pl (Tree): display non-directories
	first, then directories. Previously printed
	all entries in alphabetical order regardless of
	the type.

2010-03-16 Tue  Jari Aalto  <jari.aalto@cante.net>

	* bin/ddir.pl (Tree): Sort directory entries.

2010-03-15 Mon  Jari Aalto  <jari.aalto@cante.net>

	* bin/ddir.pl:
	Set up roject at github.com.
	(top level): Add proper function banners. GPL etc.
	(top level::Standard perl modules): Add many more modules.
	(top level::Globals): Add version variable.
	(Initialize): New.
	(Help): New. Convert old roff into POD. Add many, many options.
	(HelpExclude): New.
	(HandleCommandLineArgs): New.

2003-01-28  Jari Aalto  <jari.aalto@cante.net>

        * bin/ddir.pl: Do not use #!/usr/local/bin/perl, but